# 925r

./: .Dockerfile.swp  .env  Dockerfile  Pipfile  Taskfile.dist.yml  compose.dev.yaml  compose.fixed-ports.mixin.yaml  compose.yaml  pyproject.toml
ninetofiver/: settings.py
