[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "*"
autopep8 = "*"
certifi = "*"
cffi = "*"
chardet = "*"
charset-normalizer = "*"
confusable-homoglyphs = "*"
coreapi = "*"
coreschema = "*"
cryptography = "*"
defusedxml = "*"
Deprecated = "*"
diff-match-patch = "*"
django = "*"
django-admin-autocomplete-filter = "*"
django-admin-list-filter-dropdown = "*"
django-admin-rangefilter = "*"
django-admin-sortable = "*"
django-appconf = "*"
django-apptemplates = "*"
django-auth-ldap = "*"
django-autocomplete-light = "*"
django-configurations = "*"
django-cors-headers = "*"
django-countries = "*"
django-crispy-forms = "*"
django-debug-toolbar = "*"
django-dirtyfields = "*"
django-downloadview = "*"
django-filter = "*"
django-gravatar2 = "*"
django-ical = "*"
django-import-export = "*"
django-logentry-admin = "*"
django-model-utils = "*"
django-oauth-toolkit = "*"
django-phonenumber-field = "*"
django-polymorphic = "*"
django-recurrence = "*"
django-registration = "*"
django-rest-assured = "*"
django-rest-framework = "*"
django-rest-swagger = "*"
django-select2 = "*"
django-settings-export = "*"
django-silk = "*"
django-tables2 = "*"
django-wkhtmltopdf = "*"
djangorestframework = "*"
djangorestframework-filters = "1.0.0.dev2"
et-xmlfile = "*"
factory-boy = "*"
Faker = "*"
gprof2dot = "*"
gunicorn = "*"
humanize = "*"
icalendar = "*"
idna = "*"
importlib-metadata = "*"
itypes = "*"
Jinja2 = "*"
jwcrypto = "*"
markdown2 = "*"
MarkupPy = "*"
MarkupSafe = "*"
mysqlclient = "*"
oauthlib = "*"
odfpy = "*"
openapi-codec = "*"
openpyxl = "*"
phonenumberslite = "*"
pyasn1 = "*"
pyasn1-modules = "*"
pycodestyle = "*"
pycparser = "*"
Pygments = "*"
pypugjs = "*"
python-dateutil = "*"
python-ldap = "*"
python-redmine = "*"
pytz = "*"
PyYAML = "*"
requests = "*"
simplejson = "*"
six = "*"
sqlparse = "*"
tablib = "*"
text-unidecode = "*"
toml = "*"
typing_extensions = "*"
uritemplate = "*"
urllib3 = "*"
whitenoise = "*"
wrapt = "*"
xlrd = "*"
xlwt = "*"
zipp = "*"
mysql-connector-python = "*"
crispy-bootstrap4 = "*"
django-rangefilter = "*"
django-minio-backend = "*"

[tool.poetry.group.dev.dependencies]
isort = "*"
pudb = "*"
pylint = "*"
tox = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
